WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239831
::after/::before/::marker pseudo elements should not escape inert
https://bugs.webkit.org/show_bug.cgi?id=239831
Summary
::after/::before/::marker pseudo elements should not escape inert
Jon Davis
Reported
2022-04-27 16:03:08 PDT
With Web Inspector open, add the inert attribute to the <body> element on webkit.org. All interactions are disabled except hovering over the down-pointing chevron glyphs (::after content) still activates the drop-down menus.
Attachments
reduced-testcase.html
(139 bytes, text/html)
2022-04-27 16:09 PDT
,
Tim Nguyen (:ntim)
no flags
Details
Patch
(7.04 KB, patch)
2022-05-10 11:18 PDT
,
Tim Nguyen (:ntim)
koivisto
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq] Patch
(8.80 KB, patch)
2022-05-10 11:39 PDT
,
Tim Nguyen (:ntim)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-27 16:05:24 PDT
<
rdar://problem/92425915
>
Tim Nguyen (:ntim)
Comment 2
2022-04-27 16:09:15 PDT
Created
attachment 458479
[details]
reduced-testcase.html
Tim Nguyen (:ntim)
Comment 3
2022-05-10 11:18:13 PDT
Created
attachment 459126
[details]
Patch
EWS Watchlist
Comment 4
2022-05-10 11:19:40 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Tim Nguyen (:ntim)
Comment 5
2022-05-10 11:39:49 PDT
Created
attachment 459128
[details]
[fast-cq] Patch
EWS
Comment 6
2022-05-10 11:43:57 PDT
Committed
r294012
(
250446@main
): <
https://commits.webkit.org/250446@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459128
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug