Cherry-pick r294012. rdar://problem/92425915

Fix inertness of pseudo-elements
    https://bugs.webkit.org/show_bug.cgi?id=239831

    Reviewed by Antti Koivisto.

    When we adjust style for a pseudo-element, `m_element` and `document().activeModalDialog()` are both null. So we accidentally reset inertness to false in those cases.

    Fix this by making checking for m_element's existence too.

    LayoutTests/imported/w3c:

    * web-platform-tests/inert/inert-pseudo-element-hittest-expected.txt: Added.
    * web-platform-tests/inert/inert-pseudo-element-hittest.html: Added.

    Source/WebCore:

    Test: imported/w3c/web-platform-tests/inert/inert-pseudo-element-hittest.html

    * style/StyleAdjuster.cpp:
    (WebCore::Style::Adjuster::adjust const):

    LayoutTests:

    * platform/ios-wk2/imported/w3c/web-platform-tests/inert/inert-pseudo-element-hittest-expected.txt: Added.

    Canonical link: https://commits.webkit.org/250446@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294012 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.580@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@294305 268f45cc-cd09-0410-ab3c-d52691b4dbfc